# chem-substructure-search

./: .gitignore  README.md  alembic.ini  pyproject.toml
src/: main.py
src/backend/app/: main.py
src/backend/app/api/: deps.py  router.py
src/backend/app/api/routers/: health.py  molecules.py  search.py
src/backend/app/core/: config.py  logging.py
src/backend/app/db/: models.py  session.py
src/backend/app/db/migrations/: env.py  script.py.mako
src/backend/app/db/migrations/versions/: 0001_create_molecules.py
src/backend/app/schemas/: molecules.py  search.py
src/backend/app/services/: molecules.py  search.py
src/backend/app/static/: index.html
src/chem_search/: main.py
tests/: test_db_models.py  test_health_api.py  test_molecules_api.py  test_search_api.py  test_substructure_search.py
