[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chem-substructure-search"
version = "0.1.0"
description = "Pet project: substructure search (SMILES) using RDKit"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "rdkit",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.30",
  "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6.0",
  "httpx>=0.27",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]